--- a/QmlRemisServer/qmlremisAgi.service
+++ b/QmlRemisServer/qmlremisAgi.service
@@ -13,7 +13,7 @@ WantedBy=multi-user.target
 User=root
 Group=root
 #PermissionsStartOnly=true
-ExecStart=/usr/bin/twistd -y /usr/share/qmlremis/service/agiService.py -n
+ExecStart=/usr/bin/twistd -y /usr/share/qmlremis/service/agiService.py -n --pidfile=/var/
 WorkingDirectory=/usr/share/qmlremis/service
 #TimeoutSec=600
 #Restart=on-failure
