cambiando a quick.control2, lo que se puede

--- a/QmlRemisServer/asterisk/sip.conf
+++ b/QmlRemisServer/asterisk/sip.conf
@@ -19,7 +19,7 @@ context=internos
 canreinvite=no
 
 ;----------------------------
-;           salidas
+;           Internos FXS
 ;----------------------------
  
 [4001]
@@ -45,7 +45,7 @@ canreinvite=no
 ;----------------------------
 
 [telecom1]
-host=192.168.0.241
+host=192.168.88.241
 type=peer
 dtmfmode=rfc2833
 canreinvite=no
@@ -64,7 +64,7 @@ nat=yes
 context=incoming
 
 [telecom2]
-host=192.168.0.242
+host=192.168.88.242
 type=peer
 dtmfmode=rfc2833
 canreinvite=no
